@@ -27,6 +27,9 @@ INSP.NAME.section.redeclaration=Section declaration above overrides this declara
 INSP.NAME.section.redeclaration.message=Declaration of section ''{0}'' above overrides this declaration.
 INSP.INTN.remove.section.family=Remove section
 
+#SmkCondaSectionNotAllowedWithRun
+INSP.NAME.conda.section.not.allowed.with.run=Conda environments are not allowed with run directive.
+
 # SmkSectionMultipleArgsInspection
 INSP.NAME.section.multiple.args=Only one argument is allowed for this section.
 INSP.NAME.section.multiple.args.message=Only one argument is allowed for ''{0}'' section.
