@@ -1,0 +1,5 @@
+<html>
+<body>
+Conda environments are only allowed with shell, script, notebook, or wrapper directives (not with run).
+</body>
+</html>
